Setup instructions formatting.

--- a/hadoop-start-firstmapreduce/pom.xml
+++ b/hadoop-start-firstmapreduce/pom.xml
@@ -37,6 +37,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
